tests/integration/snapshots/integration__conformance__n_array_newlines_unclosed.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
["a",
4
,1,
stderr ---
error: expected json value, found no significant characters
 --> stdin:3:3
  |
3 | ,1,
  |   ^
  |   |
  |   expected due to `,`
  |
help: insert a placeholder value
  |
3 | ,1, "rust is a must"
  |     ++++++++++++++++
